--- a/dfd/templates/index.html
+++ b/dfd/templates/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Drive Filter</title>
+        <link rel="stylesheet" type="text/css" href="{{ static('index.css') }}" />
     </head>
     <body>
         <div id="container-control">
